<resources>
    <string name="app_name">EMI App</string>
    <string name="app_descripcion">Aplicacion de control de parte diario de la Escuela Militar de Ingenieria</string>
    <string name="app_autor_">Autor</string>
    <string name="app_autor">Est. Eyvind Emilio Tiñini Coaquira</string>
    <string name="app_autor_des">Estudiante de La Escuela Militar de Ingenieria</string>

    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Compartir</string>

    <string name="action_settings">Settings</string>
<!--Preferences-->
    <string name="title_activity_settings" translatable="false">Configuraciones</string>

    <string name="pref_SplashScreen_key" translatable="false">splash_screen</string>
    <string name="pref_SplashScreen_label">Pantalla de Inicio</string>
    <string name="pref_SplashScreen_on">Activado</string>
    <string name="pref_SplashScreen_off">No Activado</string>
    <string name="pref_SplashScreen_default">true</string>

    <string name="pref_Notificaciones_key" translatable="false">notificaciones</string>
    <string name="pref_Notificaciones_label">Notificaciones</string>
    <string name="pref_Notificaciones_on">Activado</string>
    <string name="pref_Notificaciones_off">No Activado</string>
    <string name="pref_Notificaciones_default">true</string>
<!--End Preferences-->
<!--Buttons-->
    <string name="button_login">Ingresar</string>

<!--End Buttons-->
<!--Inputs-->
    <string name="input_login_password">Contraseña</string>
    <string name="input_login_username">Usuario</string>
<!--End Inputs-->

    <!--Select option assistant-->
    <string name="seleccionar_asistencia">Seleccione Asistencia</string>
    <string-array name="parametros_asistencia">
        <item>Falta</item>
        <item>Asiste</item>
        <item>Permiso</item>
        <item>Sin Clases</item>
        <item>Baja Medica</item>
        <item>Guardia</item>
    </string-array>
    <!--End  Select option assistant-->
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Hello World, ListViewTestActivity!</string>

    <string name="choice_prompt">Select a choice</string>
    <string-array name="choices">
        <item>Alpha</item>
        <item>Bravo</item>
        <item>Charlie</item>
    </string-array>

    <string name="title_activity_activity__main">Ingreso</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>












    <!--Drawer-->
    <string name="title_section_home">Inicio</string>
    <string name="title_section_parts_notifications">Notificaciones</string>
    <string name="title_section_parts_classes">Parte diario</string>
    <string name="title_section_parts_sports">Parte deportes</string>
    <string name="title_section_list_students">Estudiantes</string>
    <string name="title_section_about_emi">Acerca de EMI</string>
    <string name="title_section_about">Acerca de</string>
    <string name="title_section_settings">Configuracion</string>
    <string name="title_section_logout">Salir</string>
    <!--End Drawer-->
    <!--Validator-->
    <string name="validator_empty">El Campo no debe estar vacio</string>
    <string name="validator_email">Correo electronico no valido</string>
    <string name="validator_password">Contraseña no valida</string>
    <!--End - Validator-->
    <!--Error Messages-->
    <string name="error_internet_connection">Revise su coneccion a internet</string>
    <!--End - Error Messages-->

</resources>
