<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/pref_SplashScreen_label"
        android:key="@string/pref_SplashScreen_key"
        android:summaryOff="@string/pref_SplashScreen_off"
        android:summaryOn="@string/pref_SplashScreen_on"
        android:defaultValue="@string/pref_SplashScreen_default"/>

    <CheckBoxPreference
        android:title="@string/pref_Notificaciones_label"
        android:key="@string/pref_Notificaciones_key"
        android:summaryOff="@string/pref_Notificaciones_off"
        android:summaryOn="@string/pref_Notificaciones_on"
        android:defaultValue="@string/pref_Notificaciones_default"/>

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
   <!-- <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />-->

</PreferenceScreen>
